# crnn_libtorch

./: CMakeLists.txt  README.md  crnn (batch).cpp  crnn.cpp
